implement symbol table

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 projects/**/*.out
-projects/06/Assembler
+projects/**/*.o
+projects/06/Assembler/assembler
 tools/bin/Hardware Simulator.dat
 tools/bin/CPU Emulator.dat
