define a new type for representing HACK addresses

--- a/projects/06/Assembler/Makefile
+++ b/projects/06/Assembler/Makefile
@@ -4,10 +4,10 @@ CFLAGS=-O -Wall -W -pedantic -ansi -std=c99 -ggdb3 -c
 assembler: assembler.o symbol_table.o utils.o
 	$(CC) -o assembler assembler.o symbol_table.o utils.o
 
-assembler.o: assembler.c symbol_table.h utils.h
+assembler.o: assembler.c symbol_table.h utils.h hack_standard.h
 	$(CC) $(CFLAGS) assembler.c
 
-symbol_table.o: symbol_table.c symbol_table.h utils.h
+symbol_table.o: symbol_table.c symbol_table.h utils.h hack_standard.h
 	$(CC) $(CFLAGS) symbol_table.c
 
 utils.o: utils.c utils.h
