move exit codes and messages to separate files

--- a/projects/06/Assembler/Makefile
+++ b/projects/06/Assembler/Makefile
@@ -1,10 +1,10 @@
 CC=gcc
 CFLAGS=-O -Wall -W -pedantic -ansi -std=c99 -ggdb3 -c
 
-assembler: assembler.o symbol_table.o utils.o
-	$(CC) -o assembler assembler.o symbol_table.o utils.o
+assembler: assembler.o symbol_table.o utils.o exit.o
+	$(CC) -o assembler assembler.o symbol_table.o utils.o exit.o
 
-assembler.o: assembler.c symbol_table.h utils.h hack_standard.h
+assembler.o: assembler.c symbol_table.h utils.h hack_standard.h exit.h
 	$(CC) $(CFLAGS) assembler.c
 
 symbol_table.o: symbol_table.c symbol_table.h utils.h hack_standard.h
@@ -12,6 +12,9 @@ symbol_table.o: symbol_table.c symbol_table.h utils.h hack_standard.h
 
 utils.o: utils.c utils.h
 	$(CC) $(CFLAGS) utils.c
+
+exit.o: exit.c exit.h
+	$(CC) $(CFLAGS) exit.c
 
 clean:
 	rm -fr *\.o test
