ignore Assembler.dat

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ projects/**/*.o
 projects/06/Assembler/assembler
 tools/bin/Hardware Simulator.dat
 tools/bin/CPU Emulator.dat
+tools/bin/Assembler.dat
