--- a/projects/06/Assembler/Makefile
+++ b/projects/06/Assembler/Makefile
@@ -1,17 +1,17 @@
 CC=gcc
 CFLAGS=-O -Wall -W -pedantic -ansi -std=c99 -ggdb3 -c -O0
 
-assembler: assembler.o symbol_table.o utils.o exit.o
-	$(CC) -o assembler assembler.o symbol_table.o utils.o exit.o
+assembler: assembler.o symbol_table.o asm_malloc.o exit.o
+	$(CC) -o assembler assembler.o symbol_table.o asm_malloc.o exit.o
 
-assembler.o: assembler.c symbol_table.h utils.h hack_standard.h exit.h
+assembler.o: assembler.c symbol_table.h asm_malloc.h hack_standard.h exit.h
 	$(CC) $(CFLAGS) assembler.c
 
-symbol_table.o: symbol_table.c symbol_table.h utils.h hack_standard.h
+symbol_table.o: symbol_table.c symbol_table.h asm_malloc.h hack_standard.h
 	$(CC) $(CFLAGS) symbol_table.c
 
-utils.o: utils.c utils.h exit.h
-	$(CC) $(CFLAGS) utils.c
+asm_malloc.o: asm_malloc.c asm_malloc.h exit.h
+	$(CC) $(CFLAGS) asm_malloc.c
 
 exit.o: exit.c exit.h
 	$(CC) $(CFLAGS) exit.c
