update .gitignore to ignore all .dat files

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 projects/**/*.out
 projects/**/*.o
 projects/06/Assembler/assembler
-tools/bin/Hardware Simulator.dat
-tools/bin/CPU Emulator.dat
-tools/bin/Assembler.dat
+tools/bin/*.dat
