add s_tokenize and is_empty util functions

--- a/VM/Makefile
+++ b/VM/Makefile
@@ -1,11 +1,11 @@
 CC=gcc
 CFLAGS=-O -Wall -W -pedantic -ansi -std=c99 -ggdb3 -c -O0
 
-vm: vm.o exit.o
-	$(CC) -o vm vm.o exit.o
+vm: vm.o utils.o exit.o
+	$(CC) -o vm vm.o utils.o exit.o
 
-vm.o: vm.c exit.h
-	$(CC) $(CFLAGS) vm.c
+vm.o: vm.c utils.h exit.h
+	$(CC) $(CFLAGS) vm.c utils.c
 
 exit.o: exit.c exit.h
 	$(CC) $(CFLAGS) exit.c
